rabbitmq/management-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: rabbitmq
  name: management
  namespace: rabbitmq
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 15672
  selector:
    k8s-app: rabbitmq
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
