rabbitmq/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: rabbitmq
  name: rabbitmq
  namespace: rabbitmq
spec:
  ports:
  - port: 5672
    nodePort: 30672
    protocol: TCP
    targetPort: 5672
  selector:
    k8s-app: rabbitmq
  type: NodePort
