rabbitmq/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: management
  namespace: rabbitmq
spec:
  rules:
  - host: rabbitmq
    http:
      paths:
      - backend:
          serviceName: management
          servicePort: 80
  tls:
  - hosts:
    - rabbitmq
    secretName: ingress-cert
status:
  loadBalancer: {}
